--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
             <div class="menu">
                 <button id= "color-mode">Color</button>
                 <button id = "rainbow-mode">Rainbos</button>
-                <button id = "Eraser-mode">Eraser</button>
+                <button id = "eraser-mode">Eraser</button>
                 <button id = "clear">Clear</button>
+                <input type="range" min="1" max="64" value="16" class="slider" id="myRange">
+                <p class="sliderValue"></p>
             </div>
             <div class="sketch-container"></div>
             <div class="empty-area"></div>
