--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
 
     </head>
     <body>
+        <h1>Etch-A-Sketch</h1>
         <div class="page">
-
             <div class="menu">
                 <button id= "color-mode">Color</button>
-                <button id = "rainbow-mode">Rainbos</button>
+                <button id = "rainbow-mode">Rainbow</button>
                 <button id = "eraser-mode">Eraser</button>
                 <button id = "clear">Clear</button>
-                <input type="range" min="1" max="64" value="16" class="slider" id="myRange">
-                <p class="sliderValue"></p>
+
+                <div class="sliderContainer">
+                    <input type="range" min="1" max="100" value="16" class="slider" id="myRange"> 
+                </div>
+                
+                <p class="sliderValue"> 4</p>
             </div>
             <div class="sketch-container"></div>
             <div class="empty-area"></div>
